TAL-564: Fixed the radio button alignment issue in iphone. (#630)

--- a/docroot/themes/custom/tateandlyle/sass/components/_modal.scss
+++ b/docroot/themes/custom/tateandlyle/sass/components/_modal.scss
@@ -55,9 +55,12 @@
       margin-bottom: 2px;
       margin-left: 1px;
       padding-right: 30px;
+      label {
+        margin-bottom: 5px;
+      }
 
       input {
-        min-height: auto;
+        min-height: initial;
         top: -2px;
         width: auto;
       }
